# test-semantic-release

./: CHANGELOG.md  pyproject.toml
.github/workflows/: release.yml
release/: parse_commit_message.py
test_semantic_release/: __init__.py
